tests/baselines/reference/functionOverloads2.errors.txt
==== tests/cases/compiler/functionOverloads2.ts (2 errors) ====
    function foo(bar: string): string;
    function foo(bar: number): number;
    function foo(bar: any): any { return bar };
    var x = foo(true);
            ~~~
!!! functionOverloads2.ts(4,9): error TS2082: Supplied parameters do not match any signature of call target:
!!! 	Could not apply type 'string' to argument 1 which is of type 'boolean'.
            ~~~
!!! functionOverloads2.ts(4,9): error TS2087: Could not select overload for 'call' expression.